[gd_scene load_steps=3 format=3 uid="uid://b2ma68sqsgqpp"]

[ext_resource type="Script" uid="uid://0jcqeug51q3" path="res://src/Extensions/BlenderPixelorama/blender_lorama_panel.gd" id="1_feuar"]
[ext_resource type="Script" uid="uid://dm38falv1j75m" path="res://src/Extensions/BlenderPixelorama/WebSocketClient.gd" id="2_p2n3e"]

[node name="BlenderLorama" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_feuar")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Status: Disconnected"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="ConnectButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Connect"

[node name="DisconnectButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Disconnect"

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource("2_p2n3e")
metadata/_custom_type_script = "uid://dm38falv1j75m"
